# MinimaMCP

./: .gitignore  LICENSE  claude_desktop_config_EXAMPLE.json  pyproject.toml  start_mcp_server.bat  store1.json
Curveball/: dapp.conf  index.html
MiniFlap_MiniDapp/MiniFlap/: dapp.conf  index.html
minidapp_stores/: defi_hub.json  minidev_marketplace.json  my_awesome_store.json  my_installed_apps.json  my_node_apps_store.json  store1.json  test_mcp_store.json  test_store.json  test_store_direct.json  xev1.json  xev2.json  xev4.json  xev5.json  xev6.json  xev7.json
minidev_package/MiniDev/: dapp.conf  index.html  mds.js
minidev_package/MiniDev/css/: main.css
readme/: README.md  grant_proposal.md  mcp_reference.md  minidapp_structure_guide.md  scenario_analysis.md
src/: test_store.json
src/minima_mcp/: __init__.py  contract_tools.py  dev_tools.py  event_tools.py  maxima_tools.py  minima_client.py  minima_primer.py  server.py  token_tools.py  transaction_tools.py
store1/: dapp.conf  index.html
temp_extract/: dapp.conf  store.json
test_minidapps/HelloMinima/: app.js  custom.css  dapp.conf  index.html
